--- a/src/app/genaille-lucas/genaille-lucas.component.html
+++ b/src/app/genaille-lucas/genaille-lucas.component.html
@@ -1,3 +1,4 @@
-<p>
-  genaille-lucas works!
-</p>
+<section>
+  <app-index-ruler></app-index-ruler>
+  <app-ruler [index]="index" *ngFor="let index of rulers"></app-ruler>
+</section>
