--- a/src/app/genaille-lucas/genaille-lucas.component.html
+++ b/src/app/genaille-lucas/genaille-lucas.component.html
@@ -1,4 +1,4 @@
 <section>
   <app-index-ruler></app-index-ruler>
-  <app-ruler [index]="index" *ngFor="let index of rulers"></app-ruler>
+  <app-ruler [digit]="digit" *ngFor="let digit of rulers" [factor]="6" [rIndex]="2"></app-ruler>
 </section>
